[package]
name = "rust_file_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }

